infra/k8s/organization-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: organization
  template:
    metadata:
      labels:
        app: organization
    spec:
      containers:
        - name: organization
          image: insightDB/organization
---
apiVersion: v1
kind: Service
metadata:
  name: organization-srv
spec:
  selector:
    app: organization
  ports:
    - name: organization
      protocol: TCP
      port: 3000
      targetPort: 3000
